--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
     <body class="home">
 
-    <h1>Welcome to Our Travel Website</h1>
+    <h1>Welcome to our Travel Website</h1>
 
     <div>
             <fieldset><legend><strong>About Us:</strong></legend>
