--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <li><a href="dream-travel-destinations.html">Dream Travel Destinations</a></li>
                         <li><a href="backpacking-on-a-budget.html">How to Backpack on a Budget</a></li>
                         <li><a href="special-events.html">Special Events Around the World</a></li>
+                        <li><a href="user-information-form.html">Contact form</a></li>
                     </ul>
                 </fieldset>
     </div>
