--- a/dream-travel-destinations.html
+++ b/dream-travel-destinations.html
@@ -16,7 +16,7 @@
         </fieldset>
     </div>
     
-    <!--A content with links that will refer you to that section of the page-->
+    <!--A table of content with links that will refer you to that section of the page-->
     <div>
         <fieldset><legend><strong>Top Five Places That We Want to Travel to:</strong></legend>
         <ul> 
@@ -113,9 +113,8 @@
                     <label>Comments:<br/>
                         <input name="comment" type="text" size="50" style="height: 2cm" placeholder="Your recommendations" />
                 </label>
-                </form>
+                <br><br>
 
-                <form>
                     <input type="Submit" value= "Submit" name="Submit" />
                     <input type="reset" value="Clear" name="clear" />
             </form>
