--- a/user-information-form.html
+++ b/user-information-form.html
@@ -13,7 +13,7 @@
 
     <div>
         <fieldset><legend><strong>Back to main page</strong></legend>
-            <a href="index.html">Main page</a>
+            <a href="index.html" class="travel">Main page</a>
         </fieldset>
     </div>
     
