--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                    Arvin.J</br> 
                    COMP 2511 - Client Development</p>
 
-                <p>Arvin and I are both first year Computer Information System's students. We both travel a lot and thought our website <br/> should evolve around that. 
+                <p class="first-letter">Arvin and I are both first year Computer Information System's students. We both travel a lot and thought our website <br/> should evolve around that. 
                     We will talk about the places we want to visit in the future, 
                     how to backpack on a budget, <br/> as we are both university students and have a very tight budget,
                     and we will talk about special festivals around the <br/> world that we want to experience.
@@ -29,12 +29,14 @@
     <div>
             <fieldset><legend><strong>Content:</strong></legend>
                 <p><strong>Explore our website by clicking on the links below:</strong></p>
+                <nav>
                     <ul>
                         <li><a href="dream-travel-destinations.html">Dream Travel Destinations</a></li>
                         <li><a href="backpacking-on-a-budget.html">How to Backpack on a Budget</a></li>
                         <li><a href="special-events.html">Special Events Around the World</a></li>
                         <li><a href="user-information-form.html">Contact form</a></li>
                     </ul>
+                </nav>
                 </fieldset>
     </div>
 
@@ -48,7 +50,7 @@
     </div>
 
     <footer>
-        <p style="color: black">
+        <p>
             <em>Top view over travel objects. (2024, January 23). Freepik. </em>
     <a href="https://www.freepik.com/free-psd/top-view-travel-objects_137508159.htm#fromView=keyword&page=2&position=26&uuid=930b7d00-2751-45d2-87a0-c44061b2ff16&query=Travel+Tourism+Background" />
             Read more
