--- a/dream-travel-destinations.html
+++ b/dream-travel-destinations.html
@@ -35,7 +35,7 @@
         <section>
             <fieldset><legend><strong>Santorini, Greece</strong></legend>
                 <figure>
-                    <img src="https://cdn.audleytravel.com/1600/1142/60/8001510-views-in-the-evening-fira.webp" width="250" height="150">
+                    <img src="Images/greece.jpg" width="250" height="150">
                     <figcaption><em>(12 Best Places to Visit in Greece, 2024)</em></figcaption>
                 </figure>
 
@@ -52,7 +52,7 @@
         <section>
             <fieldset><legend><strong>Tokyo, Japan</strong></legend>
                 <figure>
-                    <img src="https://t4.ftcdn.net/jpg/03/23/45/93/240_F_323459394_yuWKWFdP0o1uUlj0pFNTbruuanFCVCrK.jpg" width="250" height="150">
+                    <img src="Images/tokyo.jpg" width="250" height="150">
                     <figcaption><em>(Tokyo Images – Browse 852,066 Stock Photos, Vectors, and Video, n.d.)</em></figcaption>
                 </figure>
 
@@ -67,7 +67,7 @@
         <section>
             <fieldset><legend><strong>Rome, Italy</strong></legend>
                 <figure>
-                    <img src="https://travel.home.sndimg.com/content/dam/images/travel/fullset/2015/10/21/rome-top-10-attractions-vatican.jpg.rend.hgtvcom.616.462.suffix/1491581551681.jpeg" width="250" height="150">
+                    <img src="Images/rome.jpeg" width="250" height="150">
                     <figcaption><em>(Auvil, 2017)</em></figcaption>
                 </figure> 
 
@@ -89,7 +89,7 @@
     <section>
         <fieldset><legend><strong>Cape Town, South Africa</strong></legend>
             <figure>
-            <img src="https://www.zicasso.com/static/df1e8854d80a4880bba5857231010399/e5112/df1e8854d80a4880bba5857231010399.webp" width="250" height="150">
+            <img src="Images/cape town.jpg" width="250" height="150">
                 <figcaption><em>(Editorial Team, 2023b)</em></figcaption>
             </figure>
 
@@ -107,7 +107,7 @@
     <section>
         <fieldset><legend><strong>Madrid, Spain</strong></legend>
             <figure>
-                <img src="https://www.tripsavvy.com/thmb/dSui1i-HzmkX2Ag7yIHL0pjuD28=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/beachMadridvalenciapeniscola-9cd452f7e46b4aeca6a00c1b3f450ac1.jpg" width="250" height="150">
+                <img src="Images/Madrid.jpg" width="250" height="150">
                 <figcaption><em>(Corrigan, 2019)</em></figcaption>
             </figure>
             
