--- a/special-events.html
+++ b/special-events.html
@@ -17,9 +17,12 @@
     </div>
 
     <div>
-        <fieldset><legend><strong>Top 3 Events We want to travel to.</strong></legend>
+        <fieldset><legend><strong>Special Event Around the World</strong></legend>
             <table border="1">
                 <thead>
+                    <tr>
+                        <th colspan="3">Top 3 Events We want to travel to.</th>
+                    </tr>
                     <tr>
                         <th>Event</th>
                         <th>Location</th>
@@ -50,7 +53,7 @@
     <div id="Gion-Matsuri">
         <fieldset><legend><strong>Gion Matsuri</strong></legend>
             <img src="Images\Gion-Mastsuri.jpg" width="250" height="150">
-                <figcaption><em>(12 Best Places to Visit in Greece, 2024)</em></figcaption>
+                <figcaption><em></em></figcaption>
                     <p>Gion Matsuri is one of Japan's most famous festivals, 
                         held in Kyoto throughout July and centered around Yasaka Shrine. 
                         The highlights include the grand Yamaboko Processions on July 17 and 24, 
@@ -77,7 +80,7 @@
     <div id="santorini">
         <fieldset><legend><strong>Santorini, Greece</strong></legend>
             <img src="Images/Comic-Con.jpg" width="250" height="150">
-                <figcaption><em>(12 Best Places to Visit in Greece, 2024)</em></figcaption>
+                <figcaption><em></em></figcaption>
                     <p>**Comic-Con** is a major pop culture convention that celebrates comics, movies, 
                         TV shows, gaming, and fandoms from around the world. Held annually in cities like
                          San Diego, it features exciting panels, exclusive previews, 
