--- a/special-events.html
+++ b/special-events.html
@@ -58,14 +58,14 @@
                         held in Kyoto throughout July and centered around Yasaka Shrine. 
                         The highlights include the grand Yamaboko Processions on July 17 and 24, 
                         where massive, beautifully decorated floats parade through the streets. 
-                        Leading up to these parades, the **Yoiyama Evenings** offer a lively 
+                        Leading up to these parades, the Yoiyama Evenings offer a lively 
                         atmosphere with food stalls, performances, and illuminated floats. 
                         Originally a purification ritual to ward off epidemics, 
                         the festival remains deeply rooted in tradition while attracting visitors from all over the world.
         </fieldset>
     </div>
-    <div id="santorini">
-        <fieldset><legend><strong>Santorini, Greece</strong></legend>
+    <div id="Summer-Olympic-Games">
+        <fieldset><legend><strong>Summer Oylmpics Games</strong></legend>
             <img src="Images/summer-olympics.jpg" width="250" height="150">
                 <figcaption><em></em></figcaption>
                     <p>The Summer Olympics is a global multi-sport event held every four years, 
@@ -77,8 +77,8 @@
                         and unforgettable achievements.</p>
         </fieldset>
     </div>
-    <div id="santorini">
-        <fieldset><legend><strong>Santorini, Greece</strong></legend>
+    <div id="Comic-Con">
+        <fieldset><legend><strong>Comic Con</strong></legend>
             <img src="Images/Comic-Con.jpg" width="250" height="150">
                 <figcaption><em></em></figcaption>
                     <p>**Comic-Con** is a major pop culture convention that celebrates comics, movies, 
