--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <fieldset><legend><strong>Misc:</strong></legend> 
                 <p>This is the first website we have both created, and will be gratefull for your feedback.
                     We have provided a feedback <br/> form at the end of our website
-                    for your recommendations on what we can improve on, and it is completely anonymous. <br/> </strong> 
+                    for your recommendations on what we can improve on. <br/> </strong> 
                 </p>
         </fieldset>
     </div>
