--- a/backpacking-on-a-budget.html
+++ b/backpacking-on-a-budget.html
@@ -13,12 +13,13 @@
     </div>
 
     <div>
+    <nav>
         <fieldset><legend><strong>Back to main page</strong></legend>
             <a href="index.html" class="travel">Main page</a>
         </fieldset>
     </div>
 
-    <nav>
+    
         <fieldset><legend><strong>Our guide to affordable travels!</strong></legend>
             <ol> 
                 <li><a href="#budgeting"> Budgeting Tips </a></li>
@@ -121,19 +122,19 @@
         <fieldset><legend><strong>References</strong></legend>
         <footer>
             <p><em>Trip. (2024, January 30). Backpacking on a Budget: Travel Smart & Save.</em>
-            <a href="https://tripjive.com/backpacking-on-a-budget-travel-smart-save/">
+            <a target="_blank" href="https://tripjive.com/backpacking-on-a-budget-travel-smart-save/">
                 Read more
             </a>
             </p>
 
             <p><em>Vacation packing list. (2024, June 6). Pack Hacker.</em>
-            <a href=" https://packhacker.com/packing-list/vacation-packing-list/">
+            <a target="_blank" href=" https://packhacker.com/packing-list/vacation-packing-list/">
                 Read more
             </a>
             </p>
 
             <p><em> Best Trips for College Students | EF Ultimate Break. (n.d.)</em>
-            <a href="https://www.efultimatebreak.com/traveling-with-us/college-break?&utm_source=google&utm_
+            <a target="_blank" href="https://www.efultimatebreak.com/traveling-with-us/college-break?&utm_source=google&utm_
                     campaign=21022201368&utm_medium=cpc&utm_content=summer%20break%20travel&utm_term=160613516042&gad_source=1&gclid=Cj0KCQiAq-
                     u9BhCjARIsANLj-s1sbVy4D0f1CbFZvUuK26CDUyTsM4l8Hd6AkB8LHgfQ5PCsjxQuMZ8aAmQlEALw_wcB">
                 Read more
@@ -141,7 +142,7 @@
             </p>
 
             <p><em>How to travel on a budget: Our 9 best tips . (n.d.).</em>
-            <a href="https://www.ef.com/ca/blog/language/how-to-travel-on-a-budget-9-best-tips/">
+            <a target="_blank" href="https://www.ef.com/ca/blog/language/how-to-travel-on-a-budget-9-best-tips/">
                 Read more
             </a>
             </p>
