--- a/dream-travel-destinations.html
+++ b/dream-travel-destinations.html
@@ -30,7 +30,7 @@
     </fieldset>
 </nav>
     
-<main>
+
     <article id="santorini">
         <section>
             <fieldset><legend><strong>Santorini, Greece</strong></legend>
@@ -148,37 +148,35 @@
     </section>
 </div>
 
-</main>
-
 <div id="references">
     <fieldset><legend><strong>References:</strong></legend>
         <footer>
             <p><em>12 Best Places to Visit in Greece. (2024, October 2). Audley Travel</em>.  
-                <a href="https://www.audleytravel.com/ca/greece/country-guides/top-places-to-visit-in-greece" >
+                <a target="_blank" href="https://www.audleytravel.com/ca/greece/country-guides/top-places-to-visit-in-greece" >
                     Read more
                 </a>
             </p>
 
             <p><em>Tokyo Images – Browse 852,066 stock photos, vectors, and video. (n.d.). Adobe Stock.</em>
-                <a href="https://stock.adobe.com/search?k=tokyo&asset_id=323459394" >
+                <a target="_blank" href="https://stock.adobe.com/search?k=tokyo&asset_id=323459394" >
                     Read more
                 </a>
             </p>
 
             <p><em>Auvil, J. P. (2017, April 4). Rome’s Top 10 attractions : Rome :</em>
-                <a href="https://www.travelchannel.com/destinations/italy/rome/articles/romes-top-10-attractions">
+                <a target="_blank" href="https://www.travelchannel.com/destinations/italy/rome/articles/romes-top-10-attractions">
                     Read more
                 </a>
             </p>
 
             <p><em>Editorial Team. (2023b, May 29). Top 10 things to do in Cape Town. Zicasso</em>
-                <a href="https://www.zicasso.com/a/africa/south-africa/rg/cape-town/td">
+                <a target="_blank" href="https://www.zicasso.com/a/africa/south-africa/rg/cape-town/td">
                     Read more
                 </a>
             </p>
 
             <p><em>Corrigan, D. (2019, June 3). How to Get to the Beach from Madrid. TripSavvy.</em>
-                <a href="https://www.tripsavvy.com/the-nearest-beach-to-madrid-1643658">
+                <a target="_blank" href="https://www.tripsavvy.com/the-nearest-beach-to-madrid-1643658">
                     Read more
                 </a>
             </p>
