--- a/index.html
+++ b/index.html
@@ -8,9 +8,26 @@
 
 </head>
     <body class="home">
+    <header>
+        
+        <h1><img id=logo src="Images/logo.jpg" width="50" height="50">Welcome to our Travel Website</h1>
+    </header>
 
-    <h1>Welcome to our Travel Website</h1>
+    <div>
+        <fieldset><legend><strong>Content:</strong></legend>
+            <p><strong>Explore our website by clicking on the links below:</strong></p>
+            <nav>
+                <ul>
+                    <li><a href="dream-travel-destinations.html">Dream Travel Destinations</a></li>
+                    <li><a href="backpacking-on-a-budget.html">How to Backpack on a Budget</a></li>
+                    <li><a href="special-events.html">Special Events Around the World</a></li>
+                    <li><a href="user-information-form.html">Contact form</a></li>
+                </ul>
+            </nav>
+            </fieldset>
+    </div>
 
+    <main>
     <div>
             <fieldset><legend><strong>About Us:</strong></legend>
                 <p>Fawaz.H</br>
@@ -25,21 +42,6 @@
             </fieldset>
     </div>
 
-
-    <div>
-            <fieldset><legend><strong>Content:</strong></legend>
-                <p><strong>Explore our website by clicking on the links below:</strong></p>
-                <nav>
-                    <ul>
-                        <li><a href="dream-travel-destinations.html">Dream Travel Destinations</a></li>
-                        <li><a href="backpacking-on-a-budget.html">How to Backpack on a Budget</a></li>
-                        <li><a href="special-events.html">Special Events Around the World</a></li>
-                        <li><a href="user-information-form.html">Contact form</a></li>
-                    </ul>
-                </nav>
-                </fieldset>
-    </div>
-
     <div>
         <fieldset><legend><strong>Misc:</strong></legend> 
                 <p>This is the first website we have both created, and will be gratefull for your feedback.
@@ -48,6 +50,7 @@
                 </p>
         </fieldset>
     </div>
+    </main>
 
     <footer>
         <p>
