--- a/special-events.html
+++ b/special-events.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 style="color: blue; text-align: center; font-size: 32px;">
-        Special Events Around the World</h1>
-    
+    <header>
+        <h1>Special Events Around the World</h1>
+    </header>
+    <nav>
     <div>
         <fieldset><legend><strong>Back to main page</strong></legend>
             <a href="index.html">Main page</a>
@@ -50,7 +51,10 @@
 
         </fieldset>
     </div>
-    <div id="Gion-Matsuri">
+    </nav>
+
+    
+    <article id="Gion-Matsuri">
         <fieldset><legend><strong>Gion Matsuri</strong></legend>
             <img src="Images\Gion-Mastsuri.jpg" width="250" height="150">
                 <figcaption><em></em></figcaption>
@@ -63,8 +67,8 @@
                         Originally a purification ritual to ward off epidemics, 
                         the festival remains deeply rooted in tradition while attracting visitors from all over the world.
         </fieldset>
-    </div>
-    <div id="Summer-Olympic-Games">
+    </article>
+    <article id="Summer-Olympic-Games">
         <fieldset><legend><strong>Summer Oylmpics Games</strong></legend>
             <img src="Images/summer-olympics.jpg" width="250" height="150">
                 <figcaption><em></em></figcaption>
@@ -76,8 +80,8 @@
                         while the competition fosters records, inspiring moments, 
                         and unforgettable achievements.</p>
         </fieldset>
-    </div>
-    <div id="Comic-Con">
+    </article>
+    <article id="Comic-Con">
         <fieldset><legend><strong>Comic Con</strong></legend>
             <img src="Images/Comic-Con.jpg" width="250" height="150">
                 <figcaption><em></em></figcaption>
@@ -89,6 +93,6 @@
                           of industry reveals and fan-driven events, Comic-Con has become a must-attend 
                           celebration of geek culture.</p>
         </fieldset>
-    </div>
+    </article>
 </body>
 </html>
