--- a/user-information-form.html
+++ b/user-information-form.html
@@ -11,12 +11,13 @@
         <h1>User Information</h1>
     </div>
 
-    <div class="back-link">
+    <div>
+    <nav>
         <fieldset><legend><strong>Back to main page</strong></legend>
             <a href="index.html" class="travel">Main page</a>
         </fieldset>
     </div>
-    
+    </nav>
     <div class="form-c">
         <fieldset><legend><strong>User Information</strong></legend>
             <h4>Dear user, please take a moment to fill out this form.</h4>
