--- a/backpacking-on-a-budget.html
+++ b/backpacking-on-a-budget.html
@@ -36,7 +36,7 @@
     <div id="budgeting">
         <fieldset><legend><strong>1. Budgeting Tips:</strong></legend>
             <figure>
-                <img src="Images/BackPack-1.jpg" width="250" height="150">
+                <img src="Images/BackPack-1.jpg" alt= "Two guys wearing backpacks, sitting down, and drawing a map" width="250" height="150">
                 <figcaption><em> (Trip, 2024)</em></figcaption>
             </figure>
 
@@ -62,7 +62,7 @@
     <div id="essentials" >
         <fieldset><legend><strong>2. Packing Essentials:</strong></legend>
             <figure>
-                <img src="Images/BackPack-2.jpg" width="250" height="150">
+                <img src="Images/BackPack-2.jpg" alt= "All the necessities to travel" width="250" height="150">
                 <figcaption><em>(Vacation Packing List, 2024)</em></figcaption>
             </figure>
         
