--- a/dream-travel-destinations.html
+++ b/dream-travel-destinations.html
@@ -35,7 +35,7 @@
         <section>
             <fieldset><legend><strong>Santorini, Greece</strong></legend>
                 <figure>
-                    <img src="Images/greece.jpg" width="250" height="150">
+                    <img src="Images/greece.jpg" alt= "The white houses in Fira overlooking the sea during the sunset" width="250" height="150">
                     <figcaption><em>(12 Best Places to Visit in Greece, 2024)</em></figcaption>
                 </figure>
 
@@ -52,7 +52,7 @@
         <section>
             <fieldset><legend><strong>Tokyo, Japan</strong></legend>
                 <figure>
-                    <img src="Images/tokyo.jpg" width="250" height="150">
+                    <img src="Images/tokyo.jpg" alt= "Downtown Tokyo during busy hours with lots of buildings" width="250" height="150">
                     <figcaption><em>(Tokyo Images – Browse 852,066 Stock Photos, Vectors, and Video, n.d.)</em></figcaption>
                 </figure>
 
@@ -67,7 +67,7 @@
         <section>
             <fieldset><legend><strong>Rome, Italy</strong></legend>
                 <figure>
-                    <img src="Images/rome.jpeg" width="250" height="150">
+                    <img src="Images/rome.jpeg" alt= "A picture of Vatican city located in Rome" width="250" height="150">
                     <figcaption><em>(Auvil, 2017)</em></figcaption>
                 </figure> 
 
@@ -89,7 +89,7 @@
     <section>
         <fieldset><legend><strong>Cape Town, South Africa</strong></legend>
             <figure>
-            <img src="Images/cape town.jpg" width="250" height="150">
+            <img src="Images/cape town.jpg" alt= "A picture of Bo-Kaap with mountain views" width="250" height="150">
                 <figcaption><em>(Editorial Team, 2023b)</em></figcaption>
             </figure>
 
@@ -107,7 +107,7 @@
     <section>
         <fieldset><legend><strong>Madrid, Spain</strong></legend>
             <figure>
-                <img src="Images/Madrid.jpg" width="250" height="150">
+                <img src="Images/Madrid.jpg" alt= "Madrid beaches located in Valencia" width="250" height="150">
                 <figcaption><em>(Corrigan, 2019)</em></figcaption>
             </figure>
             
