--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <fieldset><legend><strong>About Us:</strong></legend>
                 <p>Fawaz.H</br>
                    Arvin.J</br> 
-                   COMP 2511 - Client Development</p>
+                   COMP 2511 - Client Development <img id="logo" src="Images/plane.jpg" width="20%" height="20%"></p>
 
                 <p class="first-letter">Arvin and I are both first year Computer Information System's students. We both travel a lot and thought our website <br/> should evolve around that. 
                     We will talk about the places we want to visit in the future, 
