--- a/special-events.html
+++ b/special-events.html
@@ -56,7 +56,7 @@
     
     <article id="Gion-Matsuri">
         <fieldset><legend><strong>Gion Matsuri</strong></legend>
-            <img src="Images\Gion-Mastsuri.jpg" width="250" height="150">
+            <img src="Images\Gion-Mastsuri.jpg" width="250" height="150" alt="street view of japan during gion matsuri">
                 <figcaption><em></em></figcaption>
                     <p>Gion Matsuri is one of Japan's most famous festivals, 
                         held in Kyoto throughout July and centered around Yasaka Shrine. 
@@ -70,7 +70,7 @@
     </article>
     <article id="Summer-Olympic-Games">
         <fieldset><legend><strong>Summer Oylmpics Games</strong></legend>
-            <img src="Images/summer-olympics.jpg" width="250" height="150">
+            <img src="Images/summer-olympics.jpg" width="250" height="150" alt="summer olympics 2028 logo">
                 <figcaption><em></em></figcaption>
                     <p>The Summer Olympics is a global multi-sport event held every four years, 
                         bringing together athletes from around the world to compete at the highest level. 
@@ -83,7 +83,7 @@
     </article>
     <article id="Comic-Con">
         <fieldset><legend><strong>Comic Con</strong></legend>
-            <img src="Images/Comic-Con.jpg" width="250" height="150">
+            <img src="Images/Comic-Con.jpg" width="250" height="150" alt="comic con logo">
                 <figcaption><em></em></figcaption>
                     <p>**Comic-Con** is a major pop culture convention that celebrates comics, movies, 
                         TV shows, gaming, and fandoms from around the world. Held annually in cities like
@@ -94,5 +94,22 @@
                           celebration of geek culture.</p>
         </fieldset>
     </article>
+
+    <div id="references">
+        <fieldset><legend><strong>References:</strong></legend>
+            <footer>
+                <p>
+                    <em>Writer, Y. M. / Y. S. S. (2023, July 10). Secrets of Kyoto / Kyoto’s Gion Festival Arose From Fear of Curses. Japannews.yomiuri.co.jp.</em>
+                    <a href="https://japannews.yomiuri.co.jp/original/perspectives/20230710-121710/">Read more</a>
+                </p>
+                <p>
+                    <em>Facebook. (2022). Facebook.com.</em>
+                    <a href="https://www.facebook.com/photo.php?fbid=999208618909718&id=100064617677259&set=a.553145130182738">Read more</a>
+                </p>
+                <p>
+                    <em>voltrxlover. (2024, August 16). 2028 Summer Olympics Los Angeles. VOLTRX® - Premium Re-Chargable Electric Shaker Cup.</em>
+                    <a href="https://www.voltrx.com/news/2028-summer-olympics-los-angeles/">Read more</a>
+                </p>
+            </footer>
 </body>
 </html>
