--- a/dream-travel-destinations.html
+++ b/dream-travel-destinations.html
@@ -17,8 +17,13 @@
     <div class="content-wrapper">
         <nav aria-label="Destination navigation">
             <fieldset>
-                <legend><strong>Back to main page</strong></legend>
-                <a href="index.html" class="travel">Main page</a>
+                <legend><strong>Navigation</strong></legend>
+                <ul>
+                    <li><a href="index.html" class="travel">Main page</a> </li>
+                    <li><a href="backpacking-on-a-budget.html">How to Backpack on a Budget</a></li>
+                    <li><a href="special-events.html">Special Events Around the World</a></li>
+                    <li><a href="user-information-form.html">Contact form</a></li>
+                </ul>
             </fieldset>
         
             <fieldset>
