--- a/user-information-form.html
+++ b/user-information-form.html
@@ -20,6 +20,9 @@
                 <legend><strong>Navigation</strong></legend>
                 <ul>
                     <li><a href="index.html">Main page</a></li>
+                    <li><a href="dream-travel-destinations.html">Dream Travel Destinations</a></li>
+                    <li><a href="backpacking-on-a-budget.html">How to Backpack on a Budget</a></li>
+                    <li><a href="special-events.html">Special Events Around the World</a></li>
                 </ul>
             </fieldset>
         </nav>
