--- a/backpacking-on-a-budget.html
+++ b/backpacking-on-a-budget.html
@@ -20,6 +20,9 @@
                 <legend><strong>Navigation</strong></legend>
                 <ul>
                     <li><a href="index.html">Main page</a></li>
+                    <li><a href="dream-travel-destinations.html">Dream Travel Destinations</a></li>
+                    <li><a href="special-events.html">Special Events Around the World</a></li>
+                    <li><a href="user-information-form.html">Contact form</a></li>
                 </ul>
             </fieldset>
         </nav>
