--- a/special-events.html
+++ b/special-events.html
@@ -18,8 +18,14 @@
         <nav aria-label="Event navigation">
             <div>
                 <fieldset>
-                    <legend><strong>Back to main page</strong></legend>
-                    <a href="index.html">Main page</a>
+                    <legend><strong>Navigation</strong></legend>
+                    <ul>
+                    <li><a href="index.html">Main page</a></li>
+                    <li><a href="dream-travel-destinations.html">Dream Travel Destinations</a></li>
+                    <li><a href="backpacking-on-a-budget.html">How to Backpack on a Budget</a></li>
+                    <li><a href="user-information-form.html">Contact form</a></li>
+
+                        </ul>
                 </fieldset>
             </div>
             
