--- a/dream-travel-destinations.html
+++ b/dream-travel-destinations.html
@@ -40,7 +40,7 @@
                 <fieldset>
                     <legend><strong>Santorini, Greece</strong></legend>
                     <figure>
-                        <img src="https://cdn.audleytravel.com/1600/1142/60/8001510-views-in-the-evening-fira.webp" 
+                        <img src="Images/greece.jpg" 
                              alt="Whitewashed buildings of Fira, Santorini overlooking the sea at sunset"
                              width="250" height="150">
                         <figcaption><em>Evening view of Fira, Santorini (Audley Travel, 2024)</em></figcaption>
@@ -53,7 +53,7 @@
                 <fieldset>
                     <legend><strong>Tokyo, Japan</strong></legend>
                     <figure>
-                        <img src="images\greece.jpg" 
+                        <img src="Images/tokyo.jpg" 
                              alt="Busy downtown Tokyo street with neon signs and tall buildings"
                              width="250" height="150">
                         <figcaption><em>Downtown Tokyo (Adobe Stock, n.d.)</em></figcaption>
@@ -92,7 +92,7 @@
                 <fieldset>
                     <legend><strong>Madrid, Spain</strong></legend>
                     <figure>
-                        <img src="Madrid.jpg" 
+                        <img src="Images/Madrid.jpg" 
                              alt="Sandy beach near Madrid with clear blue water"
                              width="250" height="150">
                         <figcaption><em>Beach near Madrid (TripSavvy, 2019)</em></figcaption>
